--- a/python-pypi/mercurial/HISTORY
+++ b/python-pypi/mercurial/HISTORY
@@ -1,3 +1,6 @@
+2013-11-02 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: updated to 2.8
+
 2013-10-03 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: updated to 2.7.2
 
