--- a/smgl/castfs/HISTORY
+++ b/smgl/castfs/HISTORY
@@ -1,3 +1,6 @@
+2013-11-02 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: PATCHLEVEL+=1; don't do useless doc'ing
+
 2012-08-05 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: register new triggers (PATCHLEVEL+=1)
 	* TRIGGERS: corrected static build check
