--- a/devel/astyle/HISTORY
+++ b/devel/astyle/HISTORY
@@ -1,3 +1,6 @@
+2013-11-02 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 2.04
+
 2013-04-16 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 2.03
 
