--- a/python-pypi/six/HISTORY
+++ b/python-pypi/six/HISTORY
@@ -1,3 +1,6 @@
+2013-11-02 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 1.4.1
+
 2013-04-16 Treeve Jelbert <treeve@sourcemage.org>
 	* DEPENDS: fix python3 usage
 
