--- a/utils/dbus/HISTORY
+++ b/utils/dbus/HISTORY
@@ -1,3 +1,6 @@
+2013-11-02 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 1.6.18
+
 2013-10-12 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 1.6.16
 
