--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2013-11-02 Robin Cook <rcook@wyrms.net>
+	* libs/sdl2: new spell, new version of sdl
+
 2013-10-27 Ismael Luceno <ismael@sourcemage.org>
 	* devel/smake: new spell, highly portable make program with automake
 	  features
