--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,6 @@
 2013-11-02 Robin Cook <rcook@wyrms.net>
 	* libs/sdl2: new spell, new version of sdl
+	* libs/sdl2_image: new spell, new version of sdl_image
 
 2013-10-27 Ismael Luceno <ismael@sourcemage.org>
 	* devel/smake: new spell, highly portable make program with automake
