--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,7 @@
 	* libs/sdl2: new spell, new version of sdl
 	* libs/sdl2_image: new spell, new version of sdl_image
 	* libs/sdl2_mixer: new spell, new version of sdl_mixer
+	* libs/sdl2_net: new spell, new version of sdl_net
 
 2013-10-27 Ismael Luceno <ismael@sourcemage.org>
 	* devel/smake: new spell, highly portable make program with automake
