--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,7 @@
 	* libs/sdl2_image: new spell, new version of sdl_image
 	* libs/sdl2_mixer: new spell, new version of sdl_mixer
 	* libs/sdl2_net: new spell, new version of sdl_net
+	* libs/sdl2_ttf: new spell, new version of sdl_ttf
 
 2013-10-27 Ismael Luceno <ismael@sourcemage.org>
 	* devel/smake: new spell, highly portable make program with automake
