--- a/security/wireshark/HISTORY
+++ b/security/wireshark/HISTORY
@@ -1,3 +1,6 @@
+2013-11-04 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 1.10.3, SECURITY_PATCH=46
+
 2013-09-15 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 1.10.2, SECURITY_PATCH=45
 	* PRE_BUILD, 01_fix_pod_file.patch: removed
