--- a/shell-term-fm/spacefm/HISTORY
+++ b/shell-term-fm/spacefm/HISTORY
@@ -1,3 +1,6 @@
+2013-11-04 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 0.9.0
+
 2013-09-24 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 0.8.7
 	* BUILD: added, to keep SPACEFM_OPTS
