--- a/video-libs/libass/HISTORY
+++ b/video-libs/libass/HISTORY
@@ -1,3 +1,7 @@
+2013-11-04 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 0.10.2
+	* UP_TRIGGERS: added, for migration from 0.10.1
+
 2013-09-27 Vlad Glagolev <stealth@sourcemage.org>
 	* DEPENDS: cleaned up; added missing enable flags; cleaned up
 
