--- a/shell-term-fm/rxvt-unicode/HISTORY
+++ b/shell-term-fm/rxvt-unicode/HISTORY
@@ -1,3 +1,7 @@
+2013-11-06 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 9.19
+	* PRE_BUILD, fix-tabber-perl-5.18-ext.diff: removed
+
 2013-05-26 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* PRE_BUILD, fix-tabber-perl-5.18-ext.diff: added patch from Arch
 	  to fix bug #551
