--- a/graphics/gimp/HISTORY
+++ b/graphics/gimp/HISTORY
@@ -1,3 +1,6 @@
+2013-11-06 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 2.8.8
+
 2013-06-22 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: version 2.8.6
 
