--- a/devel/graphviz/HISTORY
+++ b/devel/graphviz/HISTORY
@@ -1,3 +1,6 @@
+2013-11-06 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 2.34.0
+
 2013-06-02 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: version 2.30.1
 
