--- a/devel/perl/HISTORY
+++ b/devel/perl/HISTORY
@@ -1,3 +1,6 @@
+2013-11-06 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 5.18.1
+
 2013-05-19 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: version 5.18.0
 	  SECURITY_PATCH++, fixes CVE-2012-6329, CVE-2012-5195
