--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2013-11-06 Ismael Luceno <ismael@sourcemage.org>
+	* crypto/sshpass: new spell, Non-interactive ssh password auth
+
 2013-11-02 Robin Cook <rcook@wyrms.net>
 	* libs/sdl2: new spell, new version of sdl
 	* libs/sdl2_image: new spell, new version of sdl_image
