--- a/net/fping/HISTORY
+++ b/net/fping/HISTORY
@@ -1,3 +1,6 @@
+2013-11-07 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 3.7; don't do useless doc'ing
+
 2013-10-15 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 3.6
 
