--- a/gnome2-libs/gsettings-desktop-schemas/HISTORY
+++ b/gnome2-libs/gsettings-desktop-schemas/HISTORY
@@ -1,3 +1,6 @@
+2013-11-07 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 3.10.1
+
 2013-06-12 Eric Sandall <sandalle@sourcemage.org>
 	* DETAILS: Updated to 3.8.2
 	  Match upstream posted SHA256
