--- a/video/mpv/HISTORY
+++ b/video/mpv/HISTORY
@@ -1,3 +1,6 @@
+2013-11-08 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 0.2.3
+
 2013-11-04 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 0.2.2; removed outdated AUTHORS doc file
 	* DEPENDS: added new optional dependencies -- lua & texlive
