--- a/shell-term-fm/spacefm/HISTORY
+++ b/shell-term-fm/spacefm/HISTORY
@@ -1,3 +1,6 @@
+2013-11-08 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 0.9.1
+
 2013-11-04 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 0.9.0
 
