--- a/net/fping/HISTORY
+++ b/net/fping/HISTORY
@@ -1,3 +1,6 @@
+2013-11-08 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 3.8
+
 2013-11-07 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 3.7; don't do useless doc'ing
 
