--- a/xorg-driver/xf86-video-intel/HISTORY
+++ b/xorg-driver/xf86-video-intel/HISTORY
@@ -1,3 +1,9 @@
+2013-11-08 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 2.21.15
+	* BUILD, CONFIGURE: added, for kms/ums options
+	* DEPENDS: added udev flags
+	* PRE_BUILD: dropped
+
 2013-07-27 Treeve Jelbert <treeve@sourcemage.org>
 	* DEPENDS: udev => UDEV
 
