--- a/libs/icu/HISTORY
+++ b/libs/icu/HISTORY
@@ -1,3 +1,7 @@
+2013-11-09 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* BUILD: icu fails to build with clang++
+	  => force configure to use gcc
+
 2013-10-12 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 52.1 (both)
 
