--- a/x11/xautolock/HISTORY
+++ b/x11/xautolock/HISTORY
@@ -1,3 +1,8 @@
+2013-11-09 Vlad Glagolev <stealth@sourcemage.org>
+	* CONFIGURE: added, to add option for reading .Xdefaults file to get X
+	  resources values
+	* BUILD: modify and respect C/LDFLAGS
+
 2011-08-30 Vlad Glagolev <stealth@sourcemage.org>
 	* BUILD: removed dirty hack
 
