--- a/graphics/imagemagick/HISTORY
+++ b/graphics/imagemagick/HISTORY
@@ -1,3 +1,6 @@
+2013-11-09 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: version 6.8.7-5, fix source urls
+
 2013-11-06 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 6.8.7-4
 
