--- a/libs/tzdata/HISTORY
+++ b/libs/tzdata/HISTORY
@@ -1,3 +1,6 @@
+2013-12-22 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 2013i
+
 2013-12-18 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 2013h
 
