--- a/shell-term-fm/shared-mime-info/HISTORY
+++ b/shell-term-fm/shared-mime-info/HISTORY
@@ -1,3 +1,6 @@
+2013-12-22 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: version 1.2
+
 2013-04-04 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: version 1.1
 
