--- a/net/libmnl/HISTORY
+++ b/net/libmnl/HISTORY
@@ -1,2 +1,5 @@
+2013-12-24 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 1.0.3
+
 2011-09-26 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: spell created
