--- a/net/ipset/HISTORY
+++ b/net/ipset/HISTORY
@@ -1,3 +1,6 @@
+2013-12-24 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 6.20.1 (2.6 branch)
+
 2012-05-12 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 6.12.1
 
