--- a/graphics/darktable/HISTORY
+++ b/graphics/darktable/HISTORY
@@ -1,3 +1,7 @@
+2013-12-24 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: version 1.4
+	* DEPENDS: added optional dependencies on LUA and libwebp
+
 2013-09-09 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: version 1.2.3
 	* PRE_BUILD, wb_presets_nx100_liliput_plus.patch: removed
