--- a/net/ssocks/HISTORY
+++ b/net/ssocks/HISTORY
@@ -1,3 +1,6 @@
+2013-12-24 Ismael Luceno <ismael@sourcemage.org>
+	* BUILD: Fix LIBS, must include -lcrypto with -lssl
+
 2013-02-07 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 0.0.13
 	* ssl.patch: dropped, fixed by upstream
