--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2013-12-25  Treeve Jelbert <treeve@sourcemage.org>
+	* ruby-raa/ruby-2.1: new spell
+
 2013-12-12  Treeve Jelbert <treeve@sourcemage.org>
 	* qt5/qtserialport: new spell, serial port access for qt5
 
