--- a/kde4/oxygen-icons/HISTORY
+++ b/kde4/oxygen-icons/HISTORY
@@ -1,3 +1,6 @@
+2013-12-28 Treeve Jelbert <treeve@sourcemage.org> 
+	* DETAILS: version 4.12.0
+
 2013-08-08 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 4.10.5
 
