--- a/printer/cups-filters/HISTORY
+++ b/printer/cups-filters/HISTORY
@@ -1,3 +1,6 @@
+2013-12-28 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 1.0.43
+
 2013-12-05 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 1.0.42
 
