--- a/xorg-proto/xextproto/HISTORY
+++ b/xorg-proto/xextproto/HISTORY
@@ -1,3 +1,6 @@
+2012-12-28  Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 7.3.0
+
 2012-05-10  Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 7.2.1
 
