--- a/xorg-xserver/xorg-server/HISTORY
+++ b/xorg-xserver/xorg-server/HISTORY
@@ -1,3 +1,9 @@
+2013-12-28 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: 1.15.0
+	* DEPENDS: add presentproto, dri3proto, libxshmfence
+	  remove -force_depends usage
+	* BUILD, CONFIGURE: remove obsolete options
+
 2013-12-14 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: 1.14.5
 
