--- a/libs/raptor/HISTORY
+++ b/libs/raptor/HISTORY
@@ -1,3 +1,6 @@
+2013-12-28 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 2.0.12
+
 2013-04-27 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 2.0.9
 
