--- a/libs/rasqal/HISTORY
+++ b/libs/rasqal/HISTORY
@@ -1,3 +1,6 @@
+2013-12-28 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 0.9.31
+
 2013-02-10 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 0.9.30
 
