--- a/net/iproute2/HISTORY
+++ b/net/iproute2/HISTORY
@@ -1,3 +1,6 @@
+2013-12-28 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 3.12.0
+
 2013-08-11 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 3.10.0
 
