--- a/devel/swig/HISTORY
+++ b/devel/swig/HISTORY
@@ -1,3 +1,6 @@
+2013-12-29 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 2.0.11
+
 2013-06-01 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 2.0.10
 	* PRE_BUILD, python3.patch: deleted
