--- a/libs/redland/HISTORY
+++ b/libs/redland/HISTORY
@@ -1,3 +1,6 @@
+2013-12-29 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 1.0.17
+
 2013-02-10 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 1.0.16
 
