--- a/libs/libsigc++3/HISTORY
+++ b/libs/libsigc++3/HISTORY
@@ -1,3 +1,6 @@
+2013-12-29 Treeve Jelbert <treeve@sourceamge.org>
+	* DETAILS: version 2.2.11
+
 2011-11-18 Sukneet Basuta <sukneet@sourcemage.org>
 	* DETAILS: updated spell to 2.2.10
 	  gz -> bz2
