--- a/gnome2-libs/glibmm/HISTORY
+++ b/gnome2-libs/glibmm/HISTORY
@@ -1,3 +1,6 @@
+2013-12-29 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 2.38.1
+
 2013-05-04 Robin Cook <rcook@wyrms.net>
 	* DETAILS: updated VERSION to 2.36.2
 
