--- a/gnome2-libs/atk/HISTORY
+++ b/gnome2-libs/atk/HISTORY
@@ -1,3 +1,6 @@
+2013-12-30 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 2.11.4
+
 2013-04-04 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: version 2.8.0
 
