--- a/python-pypi/sqlalchemy/HISTORY
+++ b/python-pypi/sqlalchemy/HISTORY
@@ -1,3 +1,8 @@
+2013-12-31 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 0.9.0
+	* DEPENDS: remove 'suggest -sub SQLITE python'
+	  it causes problems when building against python3
+
 2013-12-09 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 0.8.4
 
