--- a/security-libs/cracklib/HISTORY
+++ b/security-libs/cracklib/HISTORY
@@ -1,3 +1,7 @@
+2013-12-31 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: 2.9.1
+	* PRE_BUILD: remove obsolete fixes
+
 2013-06-17 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: 2.9.0
 
