--- a/archive/burp/HISTORY
+++ b/archive/burp/HISTORY
@@ -1,3 +1,6 @@
+2014-01-01 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 1.3.46 (devel)
+
 2013-12-02 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 1.3.42 (devel)
 
