--- a/libs/neon/HISTORY
+++ b/libs/neon/HISTORY
@@ -1,3 +1,7 @@
+2014-01-02 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 0.30.0
+	* PRE_BUILD, spaces.patch: deleted
+
 2013-01-08 Eric Sandall <sandalle@sourcemage.org>
 	* PRE_SUB_DEPENDS, SUB_DEPENDS: Allow requiring SSL support
 
