--- a/libs/apr/HISTORY
+++ b/libs/apr/HISTORY
@@ -1,3 +1,6 @@
+2014-01-02 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 1.5.0
+
 2013-06-21 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 1.4.8
 
