--- a/python-pypi/setuptools/HISTORY
+++ b/python-pypi/setuptools/HISTORY
@@ -1,3 +1,6 @@
+2014-01-02 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 2.0.2
+
 2013-12-24 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 2.0.1
 
