--- a/python-pypi/sqlacodegen/HISTORY
+++ b/python-pypi/sqlacodegen/HISTORY
@@ -1,3 +1,6 @@
+2014-01-03 Treeve Jelbert <treeve@sourcemage.org> 
+	* DETAILS: version 1.1.4
+
 2013-06-14 Treeve Jelbert <treeve@sourcemage.org> 
 	* DETAILS: version 1.1.1
 
