--- a/gnustep-libs/gnustep-base/HISTORY
+++ b/gnustep-libs/gnustep-base/HISTORY
@@ -1,3 +1,6 @@
+2014-01-04 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: version 1.24.6
+
 2012-04-09 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: version 1.24.0
 	* DEPENDS: added optional dependency on icu
