--- a/gnustep-libs/gnustep-make/HISTORY
+++ b/gnustep-libs/gnustep-make/HISTORY
@@ -1,3 +1,6 @@
+2014-01-04 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: version 2.6.6
+
 2013-04-26 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: version 2.6.4
 
