--- a/gnustep-libs/gnustep-gui/HISTORY
+++ b/gnustep-libs/gnustep-gui/HISTORY
@@ -1,3 +1,6 @@
+2014-01-04 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: version 0.24.0
+
 2012-04-09 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: version 0.22.0
 	* DEPENDS: added optional dependency on icu
