--- a/video/gecko-mediaplayer/HISTORY
+++ b/video/gecko-mediaplayer/HISTORY
@@ -1,3 +1,6 @@
+2014-01-04 Robin Cook <rcook@wyrms.net>
+	* DETAILS: updated to 1.0.8
+
 2012-11-29 Pol Vinogradov <vin.public@gmail.com>
 	* DETAILS: version 1.0.7
 
