--- a/audio-libs/libmpdclient/HISTORY
+++ b/audio-libs/libmpdclient/HISTORY
@@ -1,3 +1,7 @@
+2014-01-05 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: version 2.9
+	* DEPENDS: add optional dependency on doxygen
+
 2012-02-15 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 2.7
 	* PRE_BUILD, Makefile.am.patch: removed
