--- a/disk/partclone/HISTORY
+++ b/disk/partclone/HISTORY
@@ -1,3 +1,6 @@
+2014-01-05 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 0.2.69
+
 2013-12-20 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 0.2.68
 
