--- a/gnome2-libs/at-spi2-core/HISTORY
+++ b/gnome2-libs/at-spi2-core/HISTORY
@@ -1,3 +1,6 @@
+2014-01-05 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: 2.10.2
+
 2013-10-14 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: 2.10.0
 
