--- a/python-pypi/isort/HISTORY
+++ b/python-pypi/isort/HISTORY
@@ -1,3 +1,6 @@
+2014-01-05 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 3.1.0
+
 2014-01-02 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 3.0.0
 	  spell created
