--- a/python-pypi/sqlalchemy/HISTORY
+++ b/python-pypi/sqlalchemy/HISTORY
@@ -1,3 +1,6 @@
+2014-01-06 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 0.9.1
+
 2013-12-31 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 0.9.0
 	* DEPENDS: remove 'suggest -sub SQLITE python'
