--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2014-01-06 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* kernels/nct6775: spell deprecated [part of mainline now]
+
 2014-01-02  Treeve Jelbert <treeve@sourcemage.org>
 	* python-pypi/isort: new spell, sort python imports
 
