--- a/kernels/nct6775/HISTORY
+++ b/kernels/nct6775/HISTORY
@@ -1,3 +1,8 @@
+2014-01-06 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* spell deprecated [part of mainline now]
+	* PATCHLEVEL=9999
+	* DETAILS: version 0
+
 2013-02-24 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* BUILD, DEPENDS, DETAILS, HISTORY, PRE_BUILD, PREPARE, TRIGGERS:
 	  spell created
