--- a/crypto/openssl/HISTORY
+++ b/crypto/openssl/HISTORY
@@ -1,3 +1,6 @@
+2014-01-07 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 1.0.0l, SECURITY_PATCH=21
+
 2013-06-17 Remko van der Vossen <wich@sourcemage.org>
 	* INSTALL: workaround for bug #556
 
