--- a/net/dhcpcd/HISTORY
+++ b/net/dhcpcd/HISTORY
@@ -1,3 +1,6 @@
+2014-01-07 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 6.2.0
+
 2013-10-19 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 6.1.0
 
