--- a/devel/unifdef/HISTORY
+++ b/devel/unifdef/HISTORY
@@ -1,3 +1,6 @@
+2014-01-08 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 2.10
+
 2013-06-08 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 2.9
 
