--- a/libs/muparser/HISTORY
+++ b/libs/muparser/HISTORY
@@ -1,3 +1,6 @@
+2014-01-08 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: fix SOURCE_URL
+
 2013-08-09 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 2.2.3
 	  new website & url
