--- a/devel/cppcheck/INSTALL
+++ b/devel/cppcheck/INSTALL
@@ -1,1 +1,3 @@
-make PREFIX=${INSTALL_ROOT}/usr install
+make PREFIX=${INSTALL_ROOT}/usr CFGDIR=/usr/share/cppcheck/cfg install &&
+mkdir -p ${INSTALL_ROOT}/usr/share/cppcheck/cfg                        &&
+install -m644 ${SOURCE_DIRECTORY}/cfg/* ${INSTALL_ROOT}/usr/share/cppcheck/cfg/
