--- a/crypto/libssh/HISTORY
+++ b/crypto/libssh/HISTORY
@@ -1,3 +1,6 @@
+2014-01-09 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 0.6.0
+
 2013-11-17 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 0.5.5
 
