--- a/libs/libdrm/HISTORY
+++ b/libs/libdrm/HISTORY
@@ -1,3 +1,6 @@
+2014-01-09 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: 2.4.51
+
 2013-12-04 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: 2.4.50
 
