--- a/printer/cups/HISTORY
+++ b/printer/cups/HISTORY
@@ -1,3 +1,6 @@
+2014-01-9 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 1.7.1
+
 2013-10-25 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 1.7.0
 
