--- a/utils/grep/HISTORY
+++ b/utils/grep/HISTORY
@@ -1,3 +1,6 @@
+2014-01-09 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 2.16
+
 2012-10-12 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 2.14
 
