--- a/gnome3-libs/libgda5/HISTORY
+++ b/gnome3-libs/libgda5/HISTORY
@@ -1,3 +1,7 @@
+2014-01-09 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 5.2.2
+	* PEPENDS: add itstool
+
 2013-05-04 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 5.1.2
 	  spell created, derived from libgda4
