--- a/graphics/exiv2/HISTORY
+++ b/graphics/exiv2/HISTORY
@@ -1,3 +1,8 @@
+2014-01-11 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 0.24
+	* UP_TRIGGERS: update old soversion
+	* PRE_BUILD, *.diff: deleted
+
 2012-08-05 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* 00_hyphens_used_as_minus.diff,
 	  90_changeset_r2743.diff,
