--- a/security/wireshark/HISTORY
+++ b/security/wireshark/HISTORY
@@ -1,3 +1,6 @@
+2014-01-11 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: version 1.10.5
+
 2013-12-18 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 1.10.4, SECURITY_PATCH=47
 
