--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2014-01-11 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* utils/zeroxml: new spell, a lightweight xml abstraction layer
+
 2014-01-06 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* kernels/nct6775: spell deprecated [part of mainline now]
 
