--- a/devel/valgrind/HISTORY
+++ b/devel/valgrind/HISTORY
@@ -1,3 +1,6 @@
+2014-01-11 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: version 3.9.0
+
 2012-08-26 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 3.8.0
 
