--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,8 @@
 
 2014-01-11 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* utils/zeroxml: new spell, a lightweight xml abstraction layer
+	* libs/libuv: new spell, a multi-platform support library with a focus on
+	  asynchronous I/O
 
 2014-01-06 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* kernels/nct6775: spell deprecated [part of mainline now]
