--- a/audio-soft/easytag/HISTORY
+++ b/audio-soft/easytag/HISTORY
@@ -1,3 +1,7 @@
+2014-01-12 Robin Cook <rcook@wyrms.net>
+	* DETAILS: updated VERSION to 2.1.9
+	* CONFIGURE: added for option to build with GTK3
+
 2013-09-26 Vlad Glagolev <stealth@sourcemage.org>
 	* DEPENDS: removed extra harfbuzz dependency
 
