--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2014-01-13  Treeve Jelbert <treeve@sourcemage.org>
+	* FUNCTIONS: remove obsolete functions regarding qt3/kde3
+
 2014-01-11 Vlad Glagolev <stealth@sourcemage.org>
 	* utils/mdp: new spell, simplified password manager
 
