--- a/utils/multitail/HISTORY
+++ b/utils/multitail/HISTORY
@@ -1,3 +1,7 @@
+2014-01-13 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 6.0
+	* PRE_BUILD: added
+
 2013-07-01 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 5.2.13
 
