--- a/audio-drivers/pulseaudio/HISTORY
+++ b/audio-drivers/pulseaudio/HISTORY
@@ -1,3 +1,6 @@
+2014-01-13 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 4.0
+
 2013-09-06 Eric Sandall <sandalle@sourcemage.org>
 	* DEPENDS: Replaced xorg-libs with libx11, libice, libsm, libxext, libxtst
 	  gtk+2 support also needs libxxf86vm
