--- a/gnome2-libs/gtk-doc/HISTORY
+++ b/gnome2-libs/gtk-doc/HISTORY
@@ -1,3 +1,6 @@
+2014-01-14 Tommy Boatman <tboatman@sourcemage.org>
+	* DEPENDS: requires itstool
+
 2013-07-10 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 1.19
 
