--- a/archive/rpm2targz/HISTORY
+++ b/archive/rpm2targz/HISTORY
@@ -1,3 +1,7 @@
+2014-01-15 Ladislav Hagara<hgr@vabo.cz>
+	* DETAILS: 9.0.0.5g
+	* PRE_BUILD: removed
+
 2010-05-21 Eric Sandall <sandalle@sourcemage.org>
 	* CONFLICTS: Conflicts with rpmunpack (see bug #15715)
 
