--- a/disk/e2fsprogs/HISTORY
+++ b/disk/e2fsprogs/HISTORY
@@ -1,3 +1,6 @@
+2014-01-15 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: Updated to 1.42.9
+
 2013-09-15 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 1.42.8
 
