--- a/kernels/linux/HISTORY
+++ b/kernels/linux/HISTORY
@@ -1,3 +1,6 @@
+2014-01-15 Eric Sandall <sandalle@sourcemage.org>
+	* info/patches/smgl_patches/smgl-logo-0.2-for-2.6.31.patch: Works with 3.12.x
+
 2014-01-10 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* PRE_BUILD: add support for xz compressed files
 	* info/patches/maintenance_patches_3/patch-3.12.7: added
