--- a/utils/taskwarrior/HISTORY
+++ b/utils/taskwarrior/HISTORY
@@ -1,3 +1,6 @@
+2014-01-16 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: version 2.3.0
+
 2013-08-23 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 2.2.0
 
