--- a/libs/openscenegraph/HISTORY
+++ b/libs/openscenegraph/HISTORY
@@ -1,3 +1,6 @@
+2014-01-17 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DEPENDS: add dependency on gdal, optional dependency on qt4
+
 2014-01-05 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: version 3.2.0
 	* DEPENDS: switch dependency on ffmpeg from legacy to stable
