--- a/science/geos/HISTORY
+++ b/science/geos/HISTORY
@@ -1,3 +1,6 @@
+2014-01-17 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: version 3.4.2
+
 2012-05-06 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: version 3.3.3
 
