--- a/devel/git/HISTORY
+++ b/devel/git/HISTORY
@@ -1,3 +1,6 @@
+2014-01-17 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 1.8.5.3
+
 2013-12-21 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: version 1.8.5.2
 
