--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2014-01-17 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* libs/libnoise: new spell, a coherent noise generator in C++
+
 2014-01-13  Treeve Jelbert <treeve@sourcemage.org>
 	* FUNCTIONS: remove obsolete functions regarding qt3/kde3
 
