--- a/net/dhcpcd/HISTORY
+++ b/net/dhcpcd/HISTORY
@@ -1,3 +1,6 @@
+2014-01-18 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 6.2.1
+
 2014-01-07 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 6.2.0
 
