--- a/libs/libmpc/HISTORY
+++ b/libs/libmpc/HISTORY
@@ -1,3 +1,6 @@
+2014-01-19 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 1.0.2
+
 2012-09-09 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 1.0.1
 	  SECURITY_PATCH=1, fixes CVE-2012-3386
