--- a/video/transcode/HISTORY
+++ b/video/transcode/HISTORY
@@ -1,3 +1,6 @@
+2014-01-15 Robin Cook <rcook@wyrms.net>
+	* PRE_BUILD: added to apply patches from gentoo
+
 2012-10-12 Treeve Jelbert <treeve@sourcemage.org> 
 	* DEPENDS: libv4l -> v4l-utils
 
