--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2014-01-20 Ladislav Hagara <hgr@vabo.cz>
+	* http/qupzilla: new spell, web browser based on qtwebkit
+
 2014-01-17 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* libs/libnoise: new spell, a coherent noise generator in C++
 	* libs/osgearth: new spell, a 3D mapping SDK for openscenegraph
