--- a/python-pypi/isort/HISTORY
+++ b/python-pypi/isort/HISTORY
@@ -1,3 +1,6 @@
+2014-01-21 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 3.1.2
+
 2014-01-05 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 3.1.0
 
