--- a/graphics-libs/harfbuzz/HISTORY
+++ b/graphics-libs/harfbuzz/HISTORY
@@ -1,3 +1,6 @@
+2014-01-21 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 0.9.25
+
 2013-10-14 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 0.9.22
 
