--- a/python-pypi/six/HISTORY
+++ b/python-pypi/six/HISTORY
@@ -1,3 +1,6 @@
+2014-01-21 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 1.5.2
+
 2013-11-02 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 1.4.1
 
