--- a/devel/indent/HISTORY
+++ b/devel/indent/HISTORY
@@ -1,3 +1,7 @@
+2014-01-22 Ismael Luceno <ismael@sourcemage.org>
+	* gcc-4.0-indent.h.patch: removed, no longer needed
+	* DETAILS: updated spell to 2.2.10
+
 2008-04-14 Jaka Kranjc <lynxlynxlynx@sourcemage.org>
 	* PRE_BUILD: fixed html doc installation path #14348
 	* DETAILS: PATCHLEVEL++
