--- a/utils/dbus/HISTORY
+++ b/utils/dbus/HISTORY
@@ -1,3 +1,6 @@
+2014-01-22 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 1.8.0
+
 2013-11-02 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 1.6.18
 
