--- a/libs/vc/HISTORY
+++ b/libs/vc/HISTORY
@@ -1,3 +1,6 @@
+2014-01-23 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 0.7.3
+
 2013-08-17 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 0.7.2
 
