--- a/video/ffmpeg/HISTORY
+++ b/video/ffmpeg/HISTORY
@@ -1,3 +1,6 @@
+2014-01-22 Tommy Boatman <tboatman@sourcemage.org>
+	* DEPENDS: libcdio-paranoia required
+
 2014-01-14 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 2.1.2
 	* PRE_BUILD, ffmpeg-2.1.1-freetype2.patch: patch removed
