--- a/devel/cmake/HISTORY
+++ b/devel/cmake/HISTORY
@@ -1,3 +1,6 @@
+2014-01-24 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 2.8.12.2
+
 2013-07-04 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 2.8.11.2
 
