--- a/xorg-driver/xf86-video-ati/HISTORY
+++ b/xorg-driver/xf86-video-ati/HISTORY
@@ -1,3 +1,7 @@
+2014-01-24 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS version 7.3.0
+	* DEPENDS: all version can use glamor
+
 2013-09-22 Pol Vinogradov <vin.public@gmail.com>
 	* DEPENDS: git version optionally depends on glamor
 
