--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2014-01-24 Ismael Luceno <ismael@sourcemage.org>
+        * graphics-libs/openglut: spell deprecated [Development of OpenGLUT
+	  ceased in May 2005]
+
 2014-01-20 Ladislav Hagara <hgr@vabo.cz>
 	* http/qupzilla: new spell, web browser based on qtwebkit
 
