--- a/graphics-libs/openglut/HISTORY
+++ b/graphics-libs/openglut/HISTORY
@@ -1,3 +1,8 @@
+2014-01-24 Ismael Luceno <ismael@sourcemage.org>
+	* spell deprecated [Development of OpenGLUT ceased in May 2005]
+	* PATCHLEVEL=9999
+	* DETAILS: version 0
+
 2011-10-14 Bor Kraljič <pyrobor@ver.si>
 	* DETAILS: fixed long description wrap (scripted)
 
