--- a/editors/lyx/HISTORY
+++ b/editors/lyx/HISTORY
@@ -1,3 +1,6 @@
+2014-01-23 Ismael Luceno <ismael@sourcemage.org>
+	* DETAILS: updated spell to 2.0.6
+
 2011-09-30 George Sherwood <gsherwood@sourcemage.org>
 	* DETAILS: Updated to version 2.0.1
 
