--- a/audio-drivers/oss/HISTORY
+++ b/audio-drivers/oss/HISTORY
@@ -1,3 +1,6 @@
+2014-01-24 Ismael Luceno <ismael@sourcemage.org>
+	* DETAILS: updated OSS_BRANCH=stable to v4.2-build2008
+
 2012-06-15 Sukneet Basuta <sukneet@sourcemage.org>
 	* DETAILS: stable updated to 4.2-build2006
 
