--- a/science/grace/HISTORY
+++ b/science/grace/HISTORY
@@ -1,3 +1,6 @@
+2014-01-24 Ismael Luceno <ismael@sourcemage.org>
+	* DETAILS: updated spell to 5.1.23
+
 2010-11-03 Ladislav Hagara <hgr@vabo.cz>
 	* DEPENDS: jpeg -> JPEG
 
