--- a/kernels/lm_sensors/HISTORY
+++ b/kernels/lm_sensors/HISTORY
@@ -1,3 +1,6 @@
+2014-01-25 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 3.3.5
+
 2013-05-29 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 3.3.4
 
