--- a/libs/gettext/HISTORY
+++ b/libs/gettext/HISTORY
@@ -1,3 +1,6 @@
+2014-01-25 Vlad Glagolev <stealth@sourcemage.org>
+	* DEPENDS: added glib2 optional dependency
+
 2013-08-18 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 0.18.3.1
 
