--- a/libs/openscenegraph/HISTORY
+++ b/libs/openscenegraph/HISTORY
@@ -1,3 +1,7 @@
+2014-01-25 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* BUILD: pass path of freetype2 headers to cmake
+	* DEPENDS: add dep on jasper, optional dep on asio
+
 2014-01-17 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DEPENDS: add dependency on gdal, optional dependency on qt4
 
