--- a/libs/openscenegraph/HISTORY
+++ b/libs/openscenegraph/HISTORY
@@ -1,6 +1,8 @@
 2014-01-25 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* BUILD: pass path of freetype2 headers to cmake
 	* DEPENDS: add dep on jasper, optional dep on asio
+	* DEPENDS, PRE_BUILD, FINAL, POST_RESURRECT: select mesa for
+	  opengl
 
 2014-01-17 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DEPENDS: add dependency on gdal, optional dependency on qt4
