--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2014-01-13  Treeve Jelbert <treeve@sourcemage.org>
+	* devel/qxmledit: Qt4/5 XML editor
+
 2014-01-24 Ismael Luceno <ismael@sourcemage.org>
         * graphics-libs/openglut: spell deprecated [Development of OpenGLUT
 	  ceased in May 2005]
