--- a/xorg-lib/wayland/HISTORY
+++ b/xorg-lib/wayland/HISTORY
@@ -1,3 +1,6 @@
+2014-01-2254 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 1.4.0
+
 2013-07-14 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 1.2.0
 
