--- a/xorg-app/weston/HISTORY
+++ b/xorg-app/weston/HISTORY
@@ -1,3 +1,6 @@
+2014-01-25 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 1.4.0
+
 2013-07-28 Treeve Jelbert <treeve@sourcemage.org> 
 	* DEPENDS: udev => UDEV
 
