--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2014-01-25 Robin Cook <rcook@wyrms.net>
+	* x11-toolkits/goocanvas2  new spell
+
 2014-01-13  Treeve Jelbert <treeve@sourcemage.org>
 	* devel/qxmledit: Qt4/5 XML editor
 	* groups: add kde5
