--- a/gnome3-libs/libsecret/HISTORY
+++ b/gnome3-libs/libsecret/HISTORY
@@ -1,3 +1,6 @@
+2014-01-25 Robin Cook <rcook@wyrms.net>
+	* DETAILS: updated to 0.16
+
 2013-04-02 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: version 0.15
 	* BUILD: don't build manpages to prevent build error
