--- a/gnome3-libs/gtksourceview3/HISTORY
+++ b/gnome3-libs/gtksourceview3/HISTORY
@@ -1,3 +1,7 @@
+2014-01-25 Robin Cook <rcook@wyms.net>
+	* DETAILS: updated to 3.8.2
+	* DEPENDS: added optional gobject-introspection
+
 2013-03-03 Sukneet Basuta <sukneet@sourcemage.org>
 	* DETAILS: updated spell to 3.6.3
 
