--- a/gnome2-libs/goffice/HISTORY
+++ b/gnome2-libs/goffice/HISTORY
@@ -1,3 +1,9 @@
+2014-01-25 Robin Cook <rcook@wyrms.net>
+	* DETAILS: updated to 0.10.9
+	* CONFIGURE: added
+	* DEPENDS: updated to new depends
+	* BUILD: apply CONFIGURE options
+
 2012-05-29 Arjan Bouter <abouter@sourcemage.org>
 	* PRE_BUILD: added a fix for pcre
 
