--- a/gnome2-apps/abiword/HISTORY
+++ b/gnome2-apps/abiword/HISTORY
@@ -1,3 +1,6 @@
+2014-01-25 Robin Cook <rcook@wyrms.net>
+	* DETAILS: updated devel version to 2.9.4
+
 2012-05-19 Arjan Bouter <abouter@sourcemage.org>
 	* PRE_BUILD: only glib.h can be included or build will fail
 
