--- a/libs/libusb-compat/HISTORY
+++ b/libs/libusb-compat/HISTORY
@@ -1,3 +1,6 @@
+2014-01-26 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 0.1.5
+
 2012-09-21 Treeve Jelbert <treeve@sourcemage.org> 
 	* DETAILS: PATCHLEVEL++
 	* PRE_BUILD: deleted ; libusbx has been fixed
