--- a/x11/xplanet/HISTORY
+++ b/x11/xplanet/HISTORY
@@ -1,3 +1,6 @@
+2014-01-26 Robin Cook <rcook@wyrms.net>
+	* PRE_BUILD: added to apply patch for newest giflib
+
 2012-05-06 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 1.3.0
 
