--- a/qt5/qtwebkit5/HISTORY
+++ b/qt5/qtwebkit5/HISTORY
@@ -1,3 +1,6 @@
+2014-01-26 Treeve Jelbert <treeve@sourcemage.org>
+	* PRE_BUILD, icu.patch: fix compile with icu-51.1
+
 2013-12-12 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 5.2.0
 
